[gd_scene load_steps=5 format=3 uid="uid://b2mnp4yqadq2v"]

[ext_resource type="Script" path="res://experiments/hybrid_astar/boat_model_test.gd" id="1_prevq"]
[ext_resource type="Texture2D" uid="uid://dvix2u8rr6fnc" path="res://icon.svg" id="2_8nqv4"]
[ext_resource type="Script" path="res://experiments/hybrid_astar/boat_3.gd" id="3_kjt1o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u5ali"]
radius = 1.0
height = 7.0

[node name="BoatModelTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prevq")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ForceLabel" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Force: 0,0"

[node name="MomentLabel" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Force: 0,0"

[node name="SimpleForceLabel" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Force: 0,0"

[node name="ControlsLabel" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 rps
0ยบ"

[node name="TreeKeysLabel" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 rps
0ยบ"

[node name="LogText" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.3325
anchor_top = 0.0166667
anchor_right = 0.94375
anchor_bottom = 0.381667
metadata/_edit_use_anchors_ = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(569, 322)
scale = Vector2(4, 4)

[node name="Boat" type="Node2D" parent="Node2D"]
unique_name_in_owner = true

[node name="Icon" type="Sprite2D" parent="Node2D/Boat"]
scale = Vector2(0.055, 0.014)
texture = ExtResource("2_8nqv4")

[node name="Rudder" type="Node2D" parent="Node2D/Boat"]
unique_name_in_owner = true
position = Vector2(-3.57, 0)

[node name="Icon2" type="Sprite2D" parent="Node2D/Boat/Rudder"]
position = Vector2(-0.65, 0)
scale = Vector2(0.01, 0.002)
texture = ExtResource("2_8nqv4")

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(197, 322)
scale = Vector2(4, 4)

[node name="Boat2" type="Node2D" parent="Node2D2"]
unique_name_in_owner = true

[node name="Icon" type="Sprite2D" parent="Node2D2/Boat2"]
scale = Vector2(0.055, 0.013)
texture = ExtResource("2_8nqv4")

[node name="Rudder2" type="Node2D" parent="Node2D2/Boat2"]
unique_name_in_owner = true
position = Vector2(-3.57, 0)

[node name="Icon2" type="Sprite2D" parent="Node2D2/Boat2/Rudder2"]
position = Vector2(-0.65, 0)
scale = Vector2(0.01, 0.002)
texture = ExtResource("2_8nqv4")

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(354, 461)

[node name="Boat3" type="RigidBody2D" parent="Node2D3"]
unique_name_in_owner = true
mass = 10.0
gravity_scale = 0.0
center_of_mass_mode = 1
inertia = 1.4
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("3_kjt1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D3/Boat3"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u5ali")

[node name="Boat3_" type="Node2D" parent="Node2D3/Boat3"]
unique_name_in_owner = true

[node name="Icon" type="Sprite2D" parent="Node2D3/Boat3/Boat3_"]
scale = Vector2(0.055, 0.013)
texture = ExtResource("2_8nqv4")

[node name="Rudder3" type="Node2D" parent="Node2D3/Boat3/Boat3_"]
unique_name_in_owner = true
position = Vector2(-3.57, 0)

[node name="Icon2" type="Sprite2D" parent="Node2D3/Boat3/Boat3_/Rudder3"]
position = Vector2(-0.65, 0)
scale = Vector2(0.01, 0.002)
texture = ExtResource("2_8nqv4")
